--- a/install
+++ b/install
@@ -8,7 +8,7 @@ echo "Updating your current install to the latest packages."
 sudo -S pacman -Syu
 
 echo "Installing dependencies."
-sudo -S pacman -S --needed alacritty curl dmenu feh firefox fish gtk3 gtk4 i3-wm i3status lua luarocks maim neofetch neovim noto-fonts papirus-icon-theme picom thunar unzip xclip
+sudo -S pacman -S --needed wget alacritty curl dmenu feh firefox fish gtk3 gtk4 i3-wm i3status lua luarocks maim neofetch neovim noto-fonts papirus-icon-theme picom thunar unzip xclip
 
 if [ -d "$HOME/.mizOS" ]; then
 	mv $HOME/.mizOS $HOME/mizOS
@@ -369,7 +369,7 @@ for d in /var/mizOS/backup/*/; do
 	sudo -S chmod -R 755 $d
 done
 
-if [ $asusans == "y" ]; then
+if [ "$asusans" = "y" ]; then
 	echo -e "\n\n"
 	miz fetch -m the-duat/mizos-asusctl
 fi
